crates/backyard-parser/tests/snapshots/singles__return_with_argument.snap
---
source: crates/backyard-parser/tests/singles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: return
    statement:
      node_type: number
      value: "4"
      loc:
        start:
          line: 1
          column: 7
          offset: 7
        end:
          line: 1
          column: 7
          offset: 7
      leadings: ~
      trailings: ~
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 7
        offset: 7
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 8
    offset: 8
leadings: ~
trailings: ~
