crates/backyard-parser/tests/snapshots/singles__this.snap
---
source: crates/backyard-parser/tests/singles.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: this
    loc:
      start:
        line: 1
        column: 0
        offset: 0
      end:
        line: 1
        column: 0
        offset: 0
    leadings: []
    trailings: []
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 0
    offset: 0
leadings: []
trailings: []
